import HtmlValidate from "../htmlvalidate";
import "../jest";

describe("rule element-required-content", () => {
	let htmlvalidate: HtmlValidate;

	beforeAll(() => {
		htmlvalidate = new HtmlValidate({
			rules: { "element-required-content": "error" },
		});
	});

	it("should not report error when element has all required content", () => {
		expect.assertions(1);
		const report = htmlvalidate.validateString(
			"<html><head><title></title></head><body></body></html>"
		);
		expect(report).toBeValid();
	});

	it("should handle unknown elements", () => {
		expect.assertions(1);
		const report = htmlvalidate.validateString("<missing-meta></missing-meta>");
		expect(report).toBeValid();
	});

	it("should report error when element is missing required content", () => {
		expect.assertions(2);
		const report = htmlvalidate.validateString("<html><body></body></html>");
		expect(report).toBeInvalid();
		expect(report).toHaveErrors([
			["element-required-content", "<html> element must have <head> as content"],
		]);
	});

	it("should report all errors when element is missing multiple content", () => {
		expect.assertions(2);
		const report = htmlvalidate.validateString("<html></html>");
		expect(report).toBeInvalid();
		expect(report).toHaveErrors([
			["element-required-content", "<html> element must have <head> as content"],
			["element-required-content", "<html> element must have <body> as content"],
		]);
	});

	it("should contain documentation", () => {
		expect.assertions(1);
		expect(htmlvalidate.getRuleDocumentation("element-required-content")).toMatchSnapshot();
	});

	it("should contain contextual documentation", () => {
		expect.assertions(1);
		htmlvalidate = new HtmlValidate({
			rules: { "element-required-content": "error" },
		});
		expect(
			htmlvalidate.getRuleDocumentation("element-required-content", null, {
				element: "<my-element>",
				missing: "<my-other-element>",
			})
		).toMatchSnapshot();
	});
});
